# tinking

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/actions/push/: action.yaml
.github/actions/setup/: action.yaml
.github/workflows/: build-image.yml
tinking/: advantages.py  coding_env.py  constants.py  logs.py  tb_rollouts.py  terminalbench_rollouts.py  train_coding_rl.py  trainer.py
tinking/beaker/: __init__.py  constants.py  defaults.py  launch.py
tinking/envs/: arithmetic.py  base.py  erdos.py  math.py  minerva.py  terminal.py
tinking/scripts/: delete.py
