[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tinking"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "terminal-bench @ git+https://github.com/davidheineman/terminal-bench.git@thread-pool-fix", # "terminal-bench",
    "minienv[beaker,docker,tbench] @ git+https://github.com/davidheineman/minienv.git",
    
    # tinker
    "tinker-cookbook @ git+https://github.com/thinking-machines-lab/tinker-cookbook.git",
    "tinker",
]

# [project.scripts]
# paper = "tinking.cli:main"

# [project.optional-dependencies]
# dev = [
#     "..."
# ]
# all = ["tinking[dev]"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["tinking*"]
exclude = []